force-app/main/default/objects/Student__c/fields/Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent__c</fullName>
    <label>Current Rent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>