force-app/main/default/objects/Student__c/fields/CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentDate__c</fullName>
    <label>CurrentDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>