force-app/main/default/objects/Student__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>PhoneNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>