force-app/main/default/objects/Student__c/fields/proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>proposal_Date__c</fullName>
    <label>proposal Date</label>
    <type>Date</type>
</CustomField>