force-app/main/default/objects/Student__c/fields/proposal_Rent__c.field-meta.xml
<CustomField>
    <fullName>proposal_Rent__c</fullName>
    <label>Proposal Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>